tests/baselines/reference/genericCallWithObjectTypeArgsAndConstraints4.errors.txt
==== tests/cases/compiler/genericCallWithObjectTypeArgsAndConstraints4.ts (6 errors) ====
    // Generic call with constraints infering type parameter from object member properties
    
    class C {
        x: string;
    }
    
    class D {
        x: string;
        y: string;
    }
    
    function foo<T, U extends T>(t: T, t2: U) {
                    ~~~~~~~~~~~
!!! genericCallWithObjectTypeArgsAndConstraints4.ts(12,17): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        return (x: T) => t2;
    }
    
    var c: C;
    var d: D;
    var r = foo(c, d);
    var r2 = foo(d, c); // error because C does not extend D
             ~~~
!!! genericCallWithObjectTypeArgsAndConstraints4.ts(19,10): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Type 'C' is missing property 'y' from type 'D'.
             ~~~
!!! genericCallWithObjectTypeArgsAndConstraints4.ts(19,10): error TS2087: Could not select overload for 'call' expression.
    var r3 = foo(c, { x: '', foo: c });
    var r4 = foo(null, null);
    var r5 = foo({}, null);
    var r6 = foo(null, {});
    var r7 = foo({}, {});
    var r8 = foo(() => { }, () => { });
    var r9 = foo(() => { }, () => 1);
    
    function other<T, U extends T>() {
                      ~~~~~~~~~~~
!!! genericCallWithObjectTypeArgsAndConstraints4.ts(28,19): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        var r4 = foo(c, d);
        var r5 = foo<T, U>(c, d); // error
                 ~~~
!!! genericCallWithObjectTypeArgsAndConstraints4.ts(30,14): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'T' to argument 1 which is of type 'C'.
                 ~~~
!!! genericCallWithObjectTypeArgsAndConstraints4.ts(30,14): error TS2087: Could not select overload for 'call' expression.
    }
    
    